chore: Move `rel="me"` link to `<head>`

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -43,8 +43,7 @@ import Logo from "./Logo.astro";
 			</ExternalLink>
 		</li>
 		<li>
-			<!-- TODO: Eventually I want @avg@average.name, but idk if Mastodon will verify redirects -->
-			<ExternalLink relMe href="https://fosstodon.org/@avghelper" data-tooltip="avg.name/@avg">
+			<ExternalLink relMe href="https://average.name/@avg" data-tooltip="avg.name/@avg">
 				<Logo key="fedi" />
 			</ExternalLink>
 		</li>
