--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -54,6 +54,7 @@ const {
 		<meta name="robots" content="noai" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>{title}</title>
+		<link rel="me" href="https://average.name/@avghelper" />
 		<link rel="icon" type="image/png" href="data:image/png;base64," />
 		<link rel="author" href="/humans.txt" />
 		<link rel="sitemap" href="/sitemap-index.xml" />
