feat: Add a footer link to the Contact page

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -9,7 +9,8 @@ import LocalLink from "./LocalLink.astro";
 			<!-- prettier-ignore -->
 			<ExternalLink href="https://git.average.name/AverageHelper/portfolio">source</ExternalLink>
 		</li>
-		<li><LocalLink fileName="humans.txt">humans.txt</LocalLink></li>
 		<li><LocalLink fileName="sitemap">sitemap</LocalLink></li>
+		<li><LocalLink fileName="humans.txt">humans.txt</LocalLink></li>
+		<li><LocalLink fileName="contact">contact</LocalLink></li>
 	</ul>
 </footer>
