chore: EVEN PRETTIER

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -4,9 +4,9 @@ import Layout from "@/layouts/Layout.astro";
 import Logo from "@/components/Logo.astro";
 ---
 
-<Layout>
-	<h1>How to reach me</h1>
-	<ul id="contact">
+<Layout contentClass="content contact">
+	<h1 id="how-to-reach-me">How to reach me</h1>
+	<ul>
 		<li>
 			<ExternalLink href="https://matrix.to/#/@average:average.name">
 				<Logo name="matrix" />
