--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -191,25 +191,31 @@ footer a.current {
 	fill: currentColor;
 }
 
-ul#contact {
+main.contact h1 {
+	width: 100%;
+	text-align: center;
+}
+
+main.contact ul {
 	padding-left: 0;
 	list-style-type: none;
 }
 
-ul#contact li > a {
+main.contact ul li > a {
 	position: relative;
 	display: flex;
 	flex-flow: row nowrap;
 	align-items: center;
 	justify-content: space-between;
 	text-decoration: none;
+	font-weight: bold;
 	min-height: 60px;
-	padding: 8px;
+	padding: 8px 10px;
 }
 
 @media (hover: hover) {
 	/* Fancy overlapping hover background a la macOS status bar */
-	ul#contact li > a:hover::after {
+	main.contact ul li > a:hover::after {
 		content: "";
 		z-index: -1;
 		position: absolute;
@@ -224,9 +230,10 @@ ul#contact li > a {
 	}
 }
 
-ul#contact li img,
-ul#contact li svg {
+main.contact ul li img,
+main.contact ul li svg {
 	width: 60px;
+	margin-right: 24px;
 	color: var(--label);
 }
 
