--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -19,5 +19,11 @@ import Logo from "@/components/Logo.astro";
 				<span>@average@average.name</span>
 			</ExternalLink>
 		</li>
+		<li>
+			<ExternalLink href="#">
+				<Logo name="phone" />
+				<span>Wouldn't you like to know?</span>
+			</ExternalLink>
+		</li>
 	</ul>
 </Layout>
