--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -73,6 +73,32 @@ h6 {
 	font-weight: 800;
 }
 
+@media only screen and (max-width: 350px) {
+	h1 {
+		font-size: 1.8rem;
+	}
+
+	h2 {
+		font-size: 1.4rem;
+	}
+
+	h3 {
+		font-size: 1.2rem;
+	}
+
+	h4 {
+		font-size: 1.1rem;
+	}
+
+	h5 {
+		font-size: 1rem;
+	}
+
+	h6 {
+		font-size: 0.9rem;
+	}
+}
+
 header.ways h2 {
 	font-size: large;
 }
