chore: More legible handles

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -20,7 +20,7 @@ import Logo from "@/components/Logo.astro";
 			</ExternalLink>
 		</li>
 		<li>
-			<ExternalLink href="#">
+			<ExternalLink href="#" class="plain">
 				<Logo name="phone" />
 				<span>Wouldn't you like to know?</span>
 			</ExternalLink>
