--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -220,6 +220,11 @@ main.contact ul li > a {
 	font-weight: bold;
 	min-height: 60px;
 	padding: 8px 10px;
+	font-family: var(--code-font-family);
+}
+
+main.contact ul li > a.plain {
+	font-family: inherit;
 }
 
 @media only screen and (max-width: 300px) {
