feat: Add Discord handle to contact page

--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -4,6 +4,10 @@ const logos = {
 		name: "Codeberg",
 		path: "/images/logo-codeberg.svg",
 	},
+	discord: {
+		name: "Discord",
+		path: "/images/logo-discord.svg",
+	},
 	fedi: {
 		name: "Fediverse",
 		path: "/images/logo-fediverse.svg",
