--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -20,6 +20,12 @@ import Logo from "@/components/Logo.astro";
 			</ExternalLink>
 		</li>
 		<li>
+			<ExternalLink href="https://discordapp.com/users/498477215931957258">
+				<Logo name="discord" />
+				<span>discord.com:avghelper</span>
+			</ExternalLink>
+		</li>
+		<li>
 			<ExternalLink href="#" class="plain">
 				<Logo name="phone" />
 				<span>Wouldn't you like to know?</span>
