feat: Add Signal

--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -28,6 +28,10 @@ const logos = {
 		name: "Telephone",
 		path: "/images/logo-telephone.svg",
 	},
+	signal: {
+		name: "Signal",
+		path: "/images/logo-signal.svg",
+	},
 } as const;
 
 interface Props {
