--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -23,11 +23,17 @@ const socials = [
 		plain: false,
 	},
 	{
-		platform: "phone",
-		handle: "Wouldn't you like to know?",
-		href: "#",
+		platform: "signal",
+		handle: "Ask on another platform",
+		href: "https://signal.org/download/",
 		plain: true,
 	},
+	// {
+	// 	platform: "phone",
+	// 	handle: "Wouldn't you like to know?",
+	// 	href: "#",
+	// 	plain: true,
+	// },
 ] as const;
 ---
 
