--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -252,7 +252,8 @@ main.contact ul li > a.plain {
 
 main.contact ul li img,
 main.contact ul li svg {
-	width: 60px;
+	width: 52px;
+	padding: 4px 0;
 	margin-right: 24px;
 	color: var(--label);
 }
