chore: Swap Contact and Support pages

--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -9,7 +9,7 @@ import LocalLink from "@/components/LocalLink.astro";
 			<li><LocalLink>About</LocalLink></li>
 			<li><LocalLink fileName="links">Links</LocalLink></li>
 			<li><ExternalLink href="https://git.average.name/AverageHelper">Code</ExternalLink></li>
-			<li><LocalLink fileName="support">Support</LocalLink></li>
+			<li><LocalLink fileName="contact">Contact</LocalLink></li>
 		</slot>
 	</ul>
 </nav>
