--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,6 +11,6 @@ import LocalLink from "./LocalLink.astro";
 		</li>
 		<li><LocalLink fileName="sitemap">sitemap</LocalLink></li>
 		<li><LocalLink fileName="humans.txt">humans.txt</LocalLink></li>
-		<li><LocalLink fileName="contact">contact</LocalLink></li>
+		<li><LocalLink fileName="support">support</LocalLink></li>
 	</ul>
 </footer>
