--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -20,6 +20,14 @@ const logos = {
 		name: "GitHub",
 		path: "/images/logo-github.svg",
 	},
+	kofi: {
+		name: "Ko-fi",
+		path: "/images/logo-kofi.svg",
+	},
+	liberapay: {
+		name: "Liberapay",
+		path: "/images/logo-liberapay.svg",
+	},
 	matrix: {
 		name: "Matrix",
 		path: "/images/logo-matrix.svg",
