--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -199,6 +199,10 @@ main.contact h1 {
 	text-align: center;
 }
 
+main.contact p {
+	text-align: center;
+}
+
 @media only screen and (max-width: 451px) {
 	main.contact h1 {
 		text-align: inherit;
