--- a/src/components/LocalLink.astro
+++ b/src/components/LocalLink.astro
@@ -3,13 +3,15 @@ import type { HTMLAttributes } from "astro/types";
 
 interface Props extends Omit<HTMLAttributes<"a">, "href" | "class"> {
 	fileName?: string;
+	class?: string | null;
 }
 
-const { fileName = "", ...attrs } = Astro.props;
+const { fileName = "", class: addtlClass = "", ...attrs } = Astro.props;
 
 const href = `/${fileName}` as const;
 const slug = Astro.url.pathname.split("/").at(-1)?.split(".").at(0) ?? "";
 const current = slug === fileName;
+const className = current ? `current ${addtlClass ?? ""}`.trim() : addtlClass || null;
 ---
 
 <!-- prettier-ignore -->
@@ -17,10 +19,10 @@ const current = slug === fileName;
 	{
 		current ? (
 			// prettier-ignore
-			<a href={href} class="current" {...attrs}><slot /><span class="visually-hidden"> (current)</span></a>
+			<a href={href} class={className} {...attrs}><slot /><span class="visually-hidden"> (current)</span></a>
 		) : (
 			// prettier-ignore
-			<a href={href} {...attrs}><slot /></a>
+			<a href={href} class={className} {...attrs}><slot /></a>
 		)
 	}
 </Fragment>
