feat: Add PayPal donation link

--- a/src/pages/support/index.astro
+++ b/src/pages/support/index.astro
@@ -14,7 +14,12 @@ const profiles = [
 	{
 		platform: "liberapay",
 		handle: "liberapay.com/average",
-		href: "https://liberapay.com/avg",
+		href: "https://liberapay.com/average",
+	},
+	{
+		platform: "paypal",
+		handle: "paypal:AverageHelper",
+		href: "https://www.paypal.com/donate/?hosted_button_id=BAR7E555H227A",
 	},
 ] as const satisfies ReadonlyNonEmptyArray<ContactInfo>;
 ---
