chore: Minor fixes for consistency with `gemini://average.name`

--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -2,6 +2,9 @@
 import Layout from "@/layouts/Layout.astro";
 import LocalLink from "@/components/LocalLink.astro";
 import ExternalLink from "@/components/ExternalLink.astro";
+
+// TODO: List examples of my work?
+// TODO: Generate this from resume.json
 ---
 
 <Layout>
