--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -56,7 +56,7 @@ const {
 		<title>{title}</title>
 		<link rel="me" href="https://average.name/@average" />
 		<link rel="icon" type="image/png" href="data:image/png;base64," />
-		<link rel="author" href="/humans.txt" />
+		<link type="text/plain" rel="author" href="/humans.txt" />
 		<link rel="sitemap" href="/sitemap-index.xml" />
 		<link
 			rel="alternate"
