chore: Use hono's middleware to set `Permissions-Policy`

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -55,8 +55,12 @@ const {
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>{title}</title>
 		<link rel="me" href="https://average.name/@average" />
+		<link rel="me" href="https://git.average.name/AverageHelper" />
+		<link rel="me" href="https://git.gay/AverageHelper" />
+		<link rel="me" href="https://codeberg.org/AverageHelper" />
+		<link rel="me" href="https://github.com/AverageHelper" />
 		<link rel="icon" type="image/png" href="data:image/png;base64," />
-		<link type="text/plain" rel="author" href="/humans.txt" />
+		<link rel="author" type="text/plain" href="/humans.txt" />
 		<link rel="sitemap" href="/sitemap-index.xml" />
 		<link
 			rel="alternate"
