chore: Add `og:site_name` tag

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -72,6 +72,7 @@ const {
 		<meta property="og:locale" content="en" />
 		<meta property="og:url" content={Astro.url.href} />
 		<meta property="og:title" content={title} />
+		<meta property="og:site_name" content={title} />
 		<meta property="og:description" content={description} />
 		<meta property="description" content={description} />
 		{
