chore: Set description for contact.astro

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -37,7 +37,7 @@ const profiles = [
 ] as const satisfies ReadonlyNonEmptyArray<ContactInfo>;
 ---
 
-<Layout contentClass="content contact">
+<Layout contentClass="content contact" description="Ways to contact me">
 	<h1 id="how-to-reach-me">How to reach me</h1>
 	<ul>
 		{
