chore: Add `color-scheme` meta

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -55,6 +55,7 @@ const {
 		<meta charset="UTF-8" />
 		<meta name="robots" content="noai" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta name="color-scheme" content="light dark" />
 		<title>{title}</title>
 		<link rel="me" href="https://average.name/@average" />
 		<link rel="me" href="https://git.average.name/AverageHelper" />
