--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -58,6 +58,7 @@ const {
 		<meta name="color-scheme" content="light dark" />
 		<title>{title}</title>
 		<link rel="me" href="https://average.name/@average" />
+		<link rel="me" href="https://bsky.app/profile/avg.average.name" />
 		<link rel="me" href="https://git.average.name/AverageHelper" />
 		<link rel="me" href="https://git.gay/AverageHelper" />
 		<link rel="me" href="https://codeberg.org/AverageHelper" />
