--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -17,6 +17,11 @@ const profiles = [
 		href: "https://average.name/@average",
 	},
 	{
+		platform: "bsky",
+		handle: "@avg.average.name",
+		href: "https://bsky.app/profile/avg.average.name",
+	},
+	{
 		platform: "discord",
 		handle: "avghelper:discord.com",
 		href: "https://discordapp.com/users/498477215931957258",
