chore: Update bsky

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -18,8 +18,8 @@ const profiles = [
 	},
 	{
 		platform: "bsky",
-		handle: "@avg.average.name",
-		href: "https://bsky.app/profile/avg.average.name",
+		handle: "@average.name",
+		href: "https://bsky.app/profile/average.name",
 	},
 	{
 		platform: "discord",
