chore: Prettier Discord tag

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -23,7 +23,7 @@ const profiles = [
 	},
 	{
 		platform: "discord",
-		handle: "avghelper:discord.com",
+		handle: "avghelper",
 		href: "https://discordapp.com/users/498477215931957258",
 	},
 	{
