chore: Link stable DID instead of tag

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -19,7 +19,7 @@ const profiles = [
 	{
 		platform: "bsky",
 		handle: "@average.name",
-		href: "https://bsky.app/profile/average.name",
+		href: "https://bsky.app/profile/did:plc:zxthjxcmxpjl372uwgrm6dxi",
 	},
 	{
 		platform: "discord",
