--- a/src/pages/ways/index.astro
+++ b/src/pages/ways/index.astro
@@ -4,7 +4,10 @@ import { Temporal } from "temporal-polyfill";
 import WaysLayout from "@/layouts/WaysLayout.astro";
 import LocalLink from "@/components/LocalLink.astro";
 
-const waysEntries = await getCollection("ways");
+const waysEntries = (await getCollection("ways")).sort((a, b) => {
+	// Reverse-chronologically
+	return Temporal.PlainDate.compare(b.data.date, a.data.date);
+});
 
 function toDate(str: string): Temporal.PlainDate {
 	return Temporal.PlainDate.from(str);
