fix: Link to contact page correctly

--- a/src/pages/work.astro
+++ b/src/pages/work.astro
@@ -12,7 +12,7 @@ import ExternalLink from "@/components/ExternalLink.astro";
 
 	<p
 		>If you have some open-source computer work you want me to do, <!-- prettier-ignore -->
-		<LocalLink fileName="/contact">contact me</LocalLink> and we'll work something out!</p
+		<LocalLink fileName="contact">contact me</LocalLink> and we'll work something out!</p
 	>
 
 	<h2>Portfolio</h2>
