feat: Add a badge

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -10,7 +10,12 @@ import LocalLink from "./LocalLink.astro";
 			<ExternalLink href="https://git.average.name/AverageHelper/portfolio">source</ExternalLink>
 		</li>
 		<li><LocalLink fileName="sitemap">sitemap</LocalLink></li>
-		<li><LocalLink fileName="humans.txt">humans.txt</LocalLink></li>
 		<li><LocalLink fileName="support">support</LocalLink></li>
+		<li
+			><LocalLink fileName="humans.txt">
+				<!-- Badge via Cadence: https://cadence.moe/blog/2024-10-05-created-by-a-human-badges -->
+				<img src="/images/created-by-a-human.svg" alt="Created by a human with a heart" />
+			</LocalLink></li
+		>
 	</ul>
 </footer>
