--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -69,6 +69,7 @@ footer {
 footer ul.links {
 	flex-flow: row nowrap;
 	justify-content: center;
+	align-items: center;
 }
 
 footer ul.links li {
@@ -77,7 +78,7 @@ footer ul.links li {
 	font-weight: bold;
 }
 
-footer ul.links li:not(:last-of-type) {
+footer ul.links li:not(:last-of-type) a {
 	margin-right: 21px;
 	padding-right: 21px;
 	border-right: 2px solid var(--separator);
@@ -91,7 +92,7 @@ footer ul.links li:not(:last-of-type) {
 	}
 
 	footer ul.links {
-		flex-flow: column wrap;
+		flex-wrap: wrap;
 	}
 
 	footer ul.links li {
@@ -99,7 +100,7 @@ footer ul.links li:not(:last-of-type) {
 		padding: initial;
 	}
 
-	footer ul.links li:not(:last-of-type) {
+	footer ul.links li:not(:last-of-type) a {
 		border: none;
 	}
 }
