fix: Prettier messed up the thing again 😭

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -11,11 +11,12 @@ import LocalLink from "./LocalLink.astro";
 		</li>
 		<li><LocalLink fileName="sitemap">sitemap</LocalLink></li>
 		<li><LocalLink fileName="support">support</LocalLink></li>
-		<li
-			><LocalLink fileName="humans.txt">
+		<li>
+			<!-- prettier-ignore -->
+			<LocalLink fileName="humans.txt">
 				<!-- Badge via Cadence: https://cadence.moe/blog/2024-10-05-created-by-a-human-badges -->
 				<img src="/images/created-by-a-human.svg" alt="Created by a human with a heart" />
-			</LocalLink></li
-		>
+			</LocalLink>
+		</li>
 	</ul>
 </footer>
